--- a/portfolio.html
+++ b/portfolio.html
@@ -10,6 +10,7 @@
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/style.css">
+		<script src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
 
 	</head>
 	<body>
@@ -33,11 +34,71 @@
 		</section>
 		<section>
 			<div class="work container">
+				<h4>Greater Rhode Island</h4>
+				<h5>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia.</h5>
+				</br>
+				<img class="portfolio_image" src="images/greater_rhode_island.jpg">
+				</br>
+				<img class="portfolio_image" src="images/greater_rhode_island_ipad.jpg">
+			</div>
+			</br>
+			</br>
+			<div class="work container">
 				<h4>Alexandra Friedman</h4>
 				<h5>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia.</h5>
 				</br>
 				<img class="portfolio_image" src="images/alexandra.jpg">
 			</div>
+			</br>
+			</br>
+			<div class="work container">
+				<h4>The Columbus Region</h4>
+				<h5>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia.</h5>
+				</br>
+				<img class="portfolio_image" src="images/columbus.jpg">
+			</div>
+			</br>
+			</br>
+			<div class="work container">
+				<h4>Panama Pacifico</h4>
+				<h5>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia.</h5>
+				</br>
+				<img class="portfolio_image" src="images/panama_pacifico.jpg">
+			</div>
+			</br>
+			</br>
+			<div class="work container">
+				<h4>Shoptopia</h4>
+				<h5>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia.</h5>
+				</br>
+				<img class="portfolio_image" src="images/shoptopia.jpg">
+			</div>
+			</br>
+			</br>
+			<div class="work container">
+				<h4>North Florida Economic Development Partnership</h4>
+				<h5>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia.</h5>
+				</br>
+				<img class="portfolio_image" src="images/NFEDP_one_sheet.jpg">
+			</div>
+			</br>
+			</br>
+			<div class="work container">
+				<h4>Peña Station</h4>
+				<h5>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia.</h5>
+				</br>
+				<img class="portfolio_image" src="images/pena_station.jpg">
+			</div>
+			</br>
+			</br>
+			<div class="work container">
+				<h4>Cleveland</h4>
+				<h5>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia.</h5>
+				</br>
+				<img class="portfolio_image" src="images/rethink_cleveland.jpg">
+			</div>
+			</br>
+			</br>
 		</section>
 		<section id="testimonial">
 			<div class="container">
@@ -48,11 +109,12 @@
 		</aside>
 		<footer>
 			<ul>
-				<li><a href="#"><img src="images/twitter.png" alt="Twitter logo"></a></li>
-				<li><a href="#"><img src="images/facebook.png" alt="Facebook logo"></a></li>
+				<li><a href="https://twitter.com/ross_kraemer"><img src="images/twitter.png" alt="Twitter logo"></a></li>
+				<li><a href="http://facebook.com/kraemer.ross"><img src="images/facebook.png" alt="Facebook logo"></a></li>
 			</ul>
 
 			<p class="copyright">Copyright 2017. All rights reserved.</p>
 		</footer>
 	</body>
+	<script src="js/script.js">
 </html>
