--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/style.css">
+		<script src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
 
 	</head>
 	<body>
@@ -26,9 +27,6 @@
 			</div>
 		</header>
 		<section id="hero">
-			<div class="container">
-				<a class="button cta" href="contact.html">Let's Talk</a>
-			</div>
 		</section>
 
 		<section id="intro">
@@ -51,11 +49,12 @@
 		</aside>
 		<footer>
 			<ul>
-				<li><a href="#"><img src="images/twitter.png" alt="Twitter logo"></a></li>
-				<li><a href="#"><img src="images/facebook.png" alt="Facebook logo"></a></li>
+				<li><a href="https://twitter.com/ross_kraemer"><img src="images/twitter.png" alt="Twitter logo"></a></li>
+				<li><a href="http://facebook.com/kraemer.ross"><img src="images/facebook.png" alt="Facebook logo"></a></li>
 			</ul>
 
 			<p class="copyright">Copyright 2017. All rights reserved.</p>
 		</footer>
 	</body>
+	<script src="js/script.js">
 </html>
